10/14 Mobile Footer Fix
Fixed overlapping text

--- a/css/styles.css
+++ b/css/styles.css
@@ -308,45 +308,45 @@ h1, h2, h3, h4, h5, h6, p {
     display: none;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (min-width: 1025px) {
   .footer {
     width: 100%;
-    height: 57px;
+    height: 95px;
     background-color: #587C83;
     display: flex;
     justify-content: space-evenly;
   }
   .footer .left {
-    width: 20%;
+    width: 285px;
     color: #FFF;
     font-family: "Segoe UI";
-    justify-content: space-evenly;
     align-items: center;
     display: flex;
-    font-size: 6px;
+    padding-left: 20px;
   }
   .footer .center {
     width: 33%;
     justify-content: space-evenly;
     align-items: center;
     display: flex;
+    margin-right: 250px;
+    margin-left: 250px;
   }
   .footer .center a {
     font-family: "Segoe UI";
     color: #FFF;
     text-decoration: none;
-    font-size: 6px;
   }
   .footer .right {
     width: 20%;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     display: flex;
   }
   .footer .right img {
-    margin-left: 4px;
-    width: 14px;
-    height: 14px;
+    padding: 19px;
+    width: 45px;
+    height: 45px;
   }
 }
 @media screen and (max-width: 1024px) {
@@ -390,45 +390,47 @@ h1, h2, h3, h4, h5, h6, p {
     height: 22px;
   }
 }
-@media screen and (min-width: 1025px) {
+@media screen and (max-width: 600px) {
   .footer {
     width: 100%;
-    height: 95px;
+    height: 57px;
     background-color: #587C83;
     display: flex;
     justify-content: space-evenly;
   }
   .footer .left {
-    width: 285px;
+    width: 33%;
     color: #FFF;
     font-family: "Segoe UI";
+    justify-content: space-evenly;
     align-items: center;
     display: flex;
-    padding-left: 20px;
+    font-size: 6px;
   }
   .footer .center {
     width: 33%;
     justify-content: space-evenly;
     align-items: center;
     display: flex;
-    margin-right: 250px;
-    margin-left: 250px;
   }
   .footer .center a {
     font-family: "Segoe UI";
-    color: #FFF;
+    color: rgb(255, 255, 255);
     text-decoration: none;
+    font-size: 6px;
   }
   .footer .right {
-    width: 20%;
-    justify-content: space-evenly;
+    width: 33%;
+    justify-content: center;
     align-items: center;
     display: flex;
   }
   .footer .right img {
-    padding: 19px;
-    width: 45px;
-    height: 45px;
+    width: 14px;
+    height: 14px;
+  }
+  .footer p {
+    font-size: 6px;
   }
 }
 /* HOME PAGE STYLING */
